<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_0">0</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctg">ctg</string>
    <string name="exp">EXP</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="pow">^</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mult">*</string>
    <string name="BrOp">(</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="BrCl">)</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="ce">CE</string>
    <string name="result"></string>
    <string name="P">P</string>
    <string name="cp">C</string>
</resources>