<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <EditText
            android:id="@+id/result"
            android:focusable="false"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:padding="10dp"
            android:text="@string/result"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center">


                <Button
                    android:id="@+id/bs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="8dp"
                    android:layout_margin="2dp"
                    android:textSize="16dp"
                    android:text="@string/sin" />

                <Button
                    android:id="@+id/bc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="8dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="16dp"
                    android:text="@string/cos" />

                <Button
                    android:id="@+id/bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="8dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="16dp"
                    android:text="@string/tan" />

                <Button
                    android:id="@+id/bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="8dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="16dp"
                    android:text="@string/ctg" />

                <Button
                    android:id="@+id/be"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="8dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="16dp"
                    android:text="@string/exp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center">


                <Button
                    android:id="@+id/b7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/b8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/b9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/bDiv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/div" />

                <Button
                    android:id="@+id/bPow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/pow" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center">


                <Button
                    android:id="@+id/b4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/b5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/b6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/bMult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/mult" />

                <Button
                    android:id="@+id/bBrOp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/BrOp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center">


                <Button
                    android:id="@+id/b1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/b2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/b3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/bMin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/minus" />

                <Button
                    android:id="@+id/bBrCl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/BrCl" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center|center_vertical">


                <Button
                    android:id="@+id/b0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/_0" />

                <Button
                    android:id="@+id/bPoint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/point" />



                <Button
                    android:id="@+id/bP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/P" />

                <Button
                    android:id="@+id/bPlus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/bCP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/cp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="1dp"
                android:gravity="center|center_vertical">

                <Button
                    android:id="@+id/bEquals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/equals" />



                <Button
                    android:id="@+id/bCE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:minWidth="10dp"
                    android:maxWidth="50dp"
                    android:minHeight="10dp"
                    android:layout_margin="2dp"
                    android:textSize="20sp"
                    android:text="@string/ce" />

            </TableRow>


        </TableLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>